--- a/Python Programming Basic Assignment/Programming_Assignment 8.ipynb
+++ b/Python Programming Basic Assignment/Programming_Assignment 8.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afd5e73a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "3. Write a Python Program to Transpose a Matrix?\n",
-    "\n",
-    "5. Write a Python Program to Remove Punctuation From a String?"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "170668da",
    "metadata": {},
@@ -23,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "f4907e2a",
    "metadata": {},
    "outputs": [],
@@ -38,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "9c5b07cc",
    "metadata": {},
    "outputs": [
@@ -65,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "59cca1f6",
    "metadata": {},
    "outputs": [
@@ -99,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "d2b81984",
    "metadata": {},
    "outputs": [
@@ -109,7 +96,7 @@
        "2"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "id": "3d4a46ba",
    "metadata": {},
    "outputs": [
@@ -157,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "id": "c2da29df",
    "metadata": {},
    "outputs": [
@@ -186,35 +173,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "id": "256cb3c5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey Wassup  all fine\n"
+     ]
     }
    ],
    "source": [
     "import string\n",
-    "sentence = \" hey ! wassup ? all fine .\"\n",
+    "sentence = \"Hey! Wassup ? all fine.\"\n",
     "for c in string.punctuation :\n",
-    "    sentence"
+    "    sentence = sentence.replace(c,\"\")\n",
+    "print(sentence)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b31991b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
